--- a/client/src/app/auth/register/register.component.html
+++ b/client/src/app/auth/register/register.component.html
@@ -1,6 +1,18 @@
 <div class="section section-image" style="background-image:url(../assets/img/civ5.jpg)">
   <div class="content-center">
     <div class="container">
+      <div class="alert alert-danger" role="alert" *ngIf="errors">
+        <div class="container">
+          <div class="alert-icon">
+            <i class="now-ui-icons objects_support-17"></i>
+          </div>
+          <strong>Oh snap!</strong> Change a few things up and try submitting again.
+
+          <ul>
+            <li *ngFor="let error of errors">{{ error | capitalize }}</li>
+          </ul>
+        </div>
+      </div>
       <div class="row">
         <div class="col-md-5 offset-md-1">
           <div class="info info-horizontal">
@@ -30,33 +42,39 @@
           <div class="card card-signup">
             <div class="card-block">
               <h4 class="card-title text-center">Register</h4>
-              <form class="form" method="" action="">
+              <form class="form" (ngSubmit)="register()">
                 <div class="input-group">
                   <span class="input-group-addon">
                     <i class="now-ui-icons users_circle-08"></i>
                   </span>
-                  <input type="text" class="form-control" placeholder="Full Name...">
+                  <input type="text" [(ngModel)]="username" name="username" class="form-control" placeholder="Username...">
+                </div>
+                <div class="input-group">
+                  <span class="input-group-addon">
+                    <i class="now-ui-icons users_circle-08"></i>
+                  </span>
+                  <input type="text" [(ngModel)]="name" name="name" class="form-control" placeholder="Full Name...">
                 </div>
                 <div class="input-group">
                   <span class="input-group-addon">
                     <i class="now-ui-icons ui-1_email-85"></i>
                   </span>
-                  <input type="text" class="form-control" placeholder="Email...">
+                  <input type="text" [(ngModel)]="email" name="email" class="form-control" placeholder="Email...">
                 </div>
                 <div class="input-group">
                   <span class="input-group-addon">
                     <i class="now-ui-icons text_caps-small"></i>
                   </span>
-                  <input type="text" class="form-control" placeholder="Password...">
+                  <input type="password" [(ngModel)]="password" name="password" class="form-control" placeholder="Password...">
                 </div>
                 <div class="input-group">
                   <span class="input-group-addon">
                     <i class="now-ui-icons text_caps-small"></i>
                   </span>
-                  <input type="text" class="form-control" placeholder="Confirm Password...">
+                  <input type="password" [(ngModel)]="confirm_password" name="confirm_password" class="form-control" placeholder="Confirm Password...">
                 </div>
                 <div class="card-footer text-center">
-                  <a href="#pablo" class="btn btn-primary btn-round btn-lg">Register</a>
+                  <button type="submit" class="btn btn-primary btn-round btn-lg">Register</button>
                 </div>
               </form>
             </div>
