--- a/client/src/app/common/partials/navigation/navigation.component.html
+++ b/client/src/app/common/partials/navigation/navigation.component.html
@@ -15,11 +15,16 @@
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" [routerLink]="['/landing']">Home</a>
         </li>
-        <li class="nav-item" routerLinkActive="active">
+
+        <li class="nav-item" routerLinkActive="active" *ngIf="!authService.loggedIn()">
           <a class="nav-link" [routerLink]="['/login']">Login</a>
         </li>
-        <li class="nav-item" routerLinkActive="active">
+        <li class="nav-item" routerLinkActive="active" *ngIf="!authService.loggedIn()">
           <a class="nav-link" [routerLink]="['/register']">Register</a>
+        </li>
+
+        <li class="nav-item" routerLinkActive="active" *ngIf="authService.loggedIn() && user">
+          <a class="nav-link" [routerLink]="['/profile', user.username]">Profile</a>
         </li>
       </ul>
     </div>
